<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E6E6E6"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_stream"
        android:textColor="#000000"
        android:id="@+id/spotify_stream"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#F08C35"
        android:onClick="launchSpotify" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:textColor="#000000"
        android:id="@+id/scores"
        android:layout_below="@+id/spotify_stream"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#F08C35"
        android:onClick="launchScores" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:textColor="#000000"
        android:id="@+id/library"
        android:layout_below="@+id/scores"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#F08C35"
        android:onClick="launchLibrary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textColor="#000000"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/library"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#F08C35"
        android:onClick="launchBuild" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:textColor="#000000"
        android:id="@+id/xyz_reader"
        android:layout_below="@+id/build_it_bigger"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#F08C35"
        android:onClick="launchReader" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/my_app"
        android:layout_below="@+id/xyz_reader"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#F44336"
        android:onClick="launchCapstone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

</RelativeLayout>
